# gql-app

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: data.py  database.py  entity.py  main.py
app/db/: data.py  database.py  models.py
app/gql/: mutation.py  query.py  type.py
tests/gql/: test_query.py
