[tool.poetry]
name = "gql-app"
version = "0.1.0"
description = ""
authors = ["georgio"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
graphene = "^3.3"
fastapi = "^0.111.0"
starlette-graphene3 = "^0.6.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
psycopg = "^3.2.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
